# Vetta_2025

./: README.md  Realtime vGRF Estimation.ipynb  VettaTF - Copy.py  VettaTF.py  process-trial_050725_sensor_vGRF_alignment - Copy.ipynb  process-trial_050725_sensor_vGRF_alignment.ipynb  process-trial_051225_vGRF_alignment - Copy.ipynb  process-trial_051225_vGRF_alignment.ipynb  pyproject.toml  requirements.txt  tfmodel_5_RP.onnx
example-subjects/subject-1a/: info.json
example-subjects/subject-1a/trials/trial-2/: raw-treadmill.mot
results/ncbc_s10/TM_p6/: pred_peaks.xlsx  pred_waveforms_L.xlsx  pred_waveforms_R.xlsx  pred_wavevforms_L.xlsx  reference_peaks.xlsx  reference_waveforms_L.xlsx  reference_waveforms_R.xlsx
results/ncbc_s15/TM_p9/: pred_peaks.xlsx  pred_waveforms_L.xlsx  pred_waveforms_R.xlsx  reference_peaks.xlsx  reference_waveforms_L.xlsx  reference_waveforms_R.xlsx
scripts/: clean_and_zip.py
subjects/johndoe/: info.json
subjects/ncbc_s10/: info.json
subjects/ncbc_s11/: info.json
subjects/ncbc_s12/: info.json
subjects/ncbc_s13/: info.json
subjects/ncbc_s14/: info.json
subjects/ncbc_s15/: info.json
subjects/ncbc_s6/: info.json
subjects/ncbc_s7/: info.json
subjects/ncbc_s8/: info.json
subjects/ncbc_s9/: info.json
temp_20250512_112647/: pyproject.toml
temp_20250512_112647/unc_applied_biomech.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
temp_20250512_112647/utils/: output.py  sensor.py  trial.py  viz.py
utils/: app.py  config.py  predict.py  sensor_realtime.py  stance.py  treadmill.py  viz.py
(+4 files in other folders)
