[project]
name = "unc-applied-biomech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.18.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scipy>=1.15.2",
    "tables>=3.10.2",
    "tqdm>=4.67.1",
]
